fix flex wrap

--- a/style.css
+++ b/style.css
@@ -67,10 +67,11 @@ a:hover {
 }
 .denni__molytvy-list {
     display: flex;
+    flex-wrap: wrap;
     
 }
 .denni__molytvy-item {
-    margin: 0 10px;
+    margin: 2px 10px;
 }
 ul {
     list-style-type: none;
